--- a/index.html
+++ b/index.html
@@ -3,9 +3,115 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="utilities.css">
     <title>暂留地</title>
 </head>
 <body>
-    <a href="articles/index-OMP.html">OMP</a>
+    <header id="home" class="header">
+        <div class="navbar top">
+            <nav>
+                <ul>
+                    <li><a href="#home">主页</a></li>
+                    <li>原作<i class="fas fa-angle-down"></i>
+                     <ul>
+                         <li><a href="#lis">Life is Strange | 奇异人生</a></li>
+                         <li><a href="#p4">Persona 4 | 女神异闻录4</a></li>
+                         <li><a href="#dn">Death Note | 死亡笔记</a></li>
+                     </ul>
+                    </li>
+                    <li><a href="#contact">联系</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="content">
+            <div id="profile-photo">
+                <img src="ryoki-yutani-CtWHKk0eoIM-unsplash.jpg" alt="头像">
+                <h1>沙漏</h1>
+                <div id="description">
+                    <p>随兴趣 偶尔翻译</p>
+                    <p>目前：P4G & Death Note</p>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main class="main-container">
+
+        <div class="fandom">
+            <h3>Life is Strange | 奇异人生</h3>
+        </div>
+        <div id="lis" class="fandom-container">
+            <div id="fics">
+                <div class="fic">
+                    <div class="left">
+                        <h3>Capturing Your Soul</h3>
+                        <h5> Mark Jefferson x Max Caulfield</h5>
+                    </div>
+                    <p>起点</p>
+                </div>
+            </div>
+        </div>
+        <div class="fandom">
+            <h3>Persona 4 | 女神异闻录4</h3>
+        </div>
+        <div id="p4" class="fandom-container">
+            <div id="fics">
+                <div class="fic">
+                    <div class="left">
+                        <h3>Reset to Default</h3>
+                        <h5> 足立透 / 鸣上悠</h5>
+                    </div>
+                    <p>全新的可能</p>
+                </div>
+                <a href="articles/index-OMP.html">
+                    <div class="fic">
+                        <div class="left">
+                            <h3>One More, Partner?</h3>
+                            <h5> 足立透 x 鸣上悠</h5>
+                        </div>
+                        <p>"Fucked up yet perfect"</p>
+                    </div>
+                </a>
+                
+                <div class="fic">
+                    <div class="left">
+                        <h3>Two Truths, One Lie</h3>
+                        <h5>无cp</h5>
+                    </div>
+                    <p>某天的日常</p>
+                </div>
+                <div class="fic">
+                    <div class="left">
+                        <h3>【待翻】Fair Trade</h3>
+                        <h5>足立透 / 鸣上悠</h5>
+                    </div>
+                    <p>来养猫吧</p>
+                </div>
+            </div>
+        </div>
+        <div class="fandom">
+            <h3>Death Note | 死亡笔记</h3>
+        </div>
+        <div id="dn" class="fandom-container">
+            <div id="fics">
+                <div class="fic">
+                    <div class="left">
+                        <h3>【待翻】A Tithe to Hell</h3>
+                        <h5>夜神月 x L</h5>
+                    </div>
+                    <p></p>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="social">
+            <a href="https://github.com/Hourglass0923" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+            <a href="https://hourglassalcoholfree.lofter.com/" target="_blank"><img src="t01698b35a556a984bf.png" alt=""></a>
+        </div>
+        <p>&copy; 2021 Hourglass - All rights reserved</p>
+    </footer>
 </body>
 </html>
