--- a/index.html
+++ b/index.html
@@ -96,13 +96,15 @@
         </div>
         <div id="dn" class="fandom-container">
             <div id="fics">
-                <div class="fic">
-                    <div class="left">
-                        <h3>【待翻】A Tithe to Hell</h3>
-                        <h5>夜神月 x L</h5>
+                <a href="articles/index-ATTH.html">
+                    <div class="fic">
+                        <div class="left">
+                            <h3>【待翻】A Tithe to Hell</h3>
+                            <h5>夜神月 x L</h5>
+                        </div>
+                        <p></p>
                     </div>
-                    <p></p>
-                </div>
+                </a>
             </div>
         </div>
     </main>
